--- a/frontend/src/styles/App.css
+++ b/frontend/src/styles/App.css
@@ -65,3 +65,34 @@ body{
   padding: 5px;
   margin: 1rem 2rem 0;
 }
+
+header{
+  width:100%;
+}
+
+ul{
+ list-style-type: none;
+ display: flex;
+ align-items: center;
+ justify-content: space-between;
+}
+
+li a {
+  padding: 10px;
+  background: #907D4F;
+
+  opacity: 80%;
+  transition: background 0.3s, color 0.3s;
+  border-bottom: solid 4px #CACEB7;
+
+
+  text-decoration: none;
+  color: #DDD9C4;
+  font-weight: bold;
+}
+
+li a:hover{
+  background: #CACEB7;
+  border-bottom: solid 4px #907D4F;
+  color: #222;
+}
