--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -5,16 +5,14 @@
   box-sizing: border-box;
 }
 
-body{
-  background: #f5f5f5;
-  font: 20px 'Nunito', sans-serif;
-  color: #333;
-}
-
 .body{
-  background: linear-gradient(115.94deg, #B9CADA 4.11%, #EBEDE8 94.63%);
-  height: 100vh;
   display: flex;
+
+  font: 20px 'Nunito', sans-serif;
+
+  background: linear-gradient(115.94deg, #B9CADA 4.11%, #EBEDE8 94.63%);
+
+  min-height: 100vh;
 }
 
 .body .content{
@@ -24,6 +22,10 @@ body{
   border-radius: 2rem;
   position: relative;
   display: flex;
+  max-width: 1900px;
+  min-width: 1800px;
+  max-height: 900px;
+  min-height: 800px;
 }
 
 .body .content .area-util{
